Fixed navbar background not showing on hamburger menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@
 }
 
 header {
-  background: linear-gradient(160deg, rgba(102, 126, 234, 0.9), rgba(118, 75, 162, 0.9));
+  background: linear-gradient(160deg, rgba(102, 126, 234, 0.5), rgba(118, 75, 162, 0.5));
   z-index: 9999;
   height: 68px;
   position: fixed;
@@ -35,6 +35,10 @@ header {
 
 .nav-up {
   top: -68px;
+}
+
+.navbar {
+  background: linear-gradient(160deg, rgba(102, 126, 234, 0.9), rgba(118, 75, 162, 0.9));
 }
 
 /* --------------- Images --------------- */
